--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/app/__mocks__/fileMock.js",
       "\\.(s?css)$": "identity-obj-proxy"
+    },
+    "globals": {
+      "_api_": "http://localhost:3000"
     }
   },
   "author": "SerzN1",
