add download service and saved items actions and reducer

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     },
     "globals": {
       "_api_": "http://localhost:3000"
-    }
+    },
+    "setupFiles": [
+      "<rootDir>/app/__mocks__/localStorageMock.js"
+    ]
   },
   "author": "SerzN1",
   "license": "MIT",
